# analytics_testing

./: .dockerignore  .gitignore  Makefile  README.md  dg.toml  main.py  pyproject.toml
dad_jokes/: pyproject.toml
deployments/local/: pyproject.toml
docker/: Dockerfile.minion  minio-setup.sh
infrastructure/: README-nessie.md
infrastructure/compose/: docker-compose.yml
infrastructure/conf/: core-site.xml  hive-site.xml  spark-defaults.conf  spark-hive-site.xml
infrastructure/dockerfiles/: Dockerfile.kafka  Dockerfile.management  Dockerfile.minion  Dockerfile.processing  Dockerfile.storage  Dockerfile.worker
infrastructure/docs/: README-nessie.md
infrastructure/examples/: minio_client_example.py  nessie_client_example.py  nessie_requirements.txt  nessie_simple_test.py
infrastructure/scripts/: init-metastore-db.sql  init-postgres-databases.sql  management-entrypoint.sh  minio-setup.sh  start-nessie-stack.sh  worker-entrypoint.sh
projects/dad-jokes/: pyproject.toml
projects/dad-jokes/.dg/: telemetry.yaml
projects/dagster-tutorial/: pyproject.toml
projects/dagster-tutorial/.dg/: telemetry.yaml
projects/dagster-tutorial/.tmp_dagster_home_crrunkgx/history/: runs.db
projects/dagster-tutorial/.tmp_dagster_home_crrunkgx/history/runs/: .db  index.db
projects/dagster-tutorial/.tmp_dagster_home_crrunkgx/schedules/: schedules.db
projects/dagster-tutorial/.tmp_dagster_home_s9yewa2s/history/: runs.db
projects/dagster-tutorial/.tmp_dagster_home_s9yewa2s/schedules/: schedules.db
projects/dagster-tutorial/.tmp_dagster_home_s9yewa2s/storage/: customers  orders  payments
projects/dbt-test/: pyproject.toml
projects/dbt-test/.dg/: telemetry.yaml
projects/dbt-test/dbt/: profiles.yml
setup_scripts/: install_hadoop.sh
(+20 files in other folders)
