[project]
name = "auricai-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.85",
    "chroma>=0.2.0",
    "dagster>=1.12.22",
    "dagster-dbt>=0.28.22",
    "dagster-dg-cli>=1.12.22",
    "dbt-duckdb>=1.10.1",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pynessie>=0.67.0",
    "ruff>=0.15.9",
]

[tool.dg]
directory_type = "deployment" 
